--- a/LoRWatcher/Pages/_Host.cshtml
+++ b/LoRWatcher/Pages/_Host.cshtml
@@ -13,12 +13,16 @@
     <!-- Material CSS -->
     <link href="css/material.min.css" rel="stylesheet">
 
-    <!-- Add Material font (Roboto) and Material icon as needed -->
+    <!-- Add Material font (Roboto) -->
     <link href="css/fonts.css" rel="stylesheet">
-    <link href="css/material.icons.css" rel="stylesheet">
 
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Material/blazorise.material.css" rel="stylesheet" />
+
+    <!-- Add font awesome -->
+    <link href="css/all.css" rel="stylesheet">
+
+
 </head>
 <body>
     <app>
