Minor bug fixes

--- a/LoRWatcher/Pages/Match.razor
+++ b/LoRWatcher/Pages/Match.razor
@@ -56,7 +56,7 @@
             </Row>
             <Row Class="my-4">
                 <div Class="col-12" Style="margin: auto">
-                    @("<insert-timeline-here>")
+                    <!--@("<insert-timeline-here>")-->
                 </div>
             </Row>
         }
