--- a/LoRWatcher/Pages/Match.razor
+++ b/LoRWatcher/Pages/Match.razor
@@ -49,16 +49,16 @@
                     <a Class="text-black-hint">DeckCode: </a>@(matchReport?.PlayerDeckCode)
                 </div>
             </Row>
-            <Row Class="my-4">
+            <!--<Row Class="my-4">
                 <div Class="col-12" Style="margin: auto">
                     <h4 Class="text-black-hint" Style="margin: auto">Timeline</h4>
                 </div>
             </Row>
             <Row Class="my-4">
                 <div Class="col-12" Style="margin: auto">
-                    <!--@("<insert-timeline-here>")-->
+                    @("<insert-timeline-here>")
                 </div>
-            </Row>
+            </Row>-->
         }
         </Container>
 
