--- a/LoRWatcher/Shared/MainLayout.razor
+++ b/LoRWatcher/Shared/MainLayout.razor
@@ -4,4 +4,10 @@
     <LayoutContent>
         @Body
     </LayoutContent>
+    <footer Class="text-black-hint" Style="text-align: center; margin: 20px">
+        <b>
+            LoR Watcher isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing Riot Games properties. <br/>
+            Riot Games, and all associated properties are trademarks or registered trademarks of Riot Games, Inc.
+        </b>
+    </footer>
 </Layout>
