--- a/LoRWatcher/Pages/Index.razor
+++ b/LoRWatcher/Pages/Index.razor
@@ -100,7 +100,7 @@
         {
             Duration = 0
         },
-        Hover = new 
+        Hover = new
         {
             AnimationDuration = 0
         },
@@ -142,7 +142,7 @@
     {
         await Retry.InvokeAsync(() => this.winsLossesChart != null, 1, int.MaxValue);
         await winsLossesChart.Clear();
-        await winsLossesChart.AddLabel(new string[] { "Wins", "Losses" });
+        await winsLossesChart.AddLabels(new string[] { "Wins", "Losses" });
         await winsLossesChart.AddDataSet(new DoughnutChartDataset<int>
         {
             Label = "Wins and losses",
