--- a/LoRWatcher/Pages/_Host.cshtml
+++ b/LoRWatcher/Pages/_Host.cshtml
@@ -22,6 +22,8 @@
     <!-- Add font awesome -->
     <link href="css/all.css" rel="stylesheet">
 
+    <!-- Add customer watcher css -->
+    <link href="css/watcher.css" rel="stylesheet">
 
 </head>
 <body>
